Find out invisible cat issue

--- a/style/style.css
+++ b/style/style.css
@@ -6,3 +6,7 @@
     display: flex;
     justify-content: center;
 }
+
+body {
+    background-color: rgb(254,250,218);
+}
